--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -75,3 +75,4 @@ obj-$(CONFIG_EARJACK_DEBUGGER) += lge_earjack_debugger.o
 obj-$(CONFIG_BU52031NVX) += pm8xxx-cradle.o
 obj-$(CONFIG_TSPDRV) += tspdrv/
 obj-$(CONFIG_UID_CPUTIME) 	+= uid_cputime.o
+obj-y				+= sound_control.o
