USB Force Fast Charging

--- a/drivers/power/Makefile
+++ b/drivers/power/Makefile
@@ -66,6 +66,7 @@ obj-$(CONFIG_LTC4088_CHARGER)	+= ltc4088-charger.o
 obj-$(CONFIG_CHARGER_SMB347)	+= smb347-charger.o
 obj-$(CONFIG_BATTERY_BCL)	+= battery_current_limit.o
 obj-$(CONFIG_LGE_CURRENTNOW)				+= currentnow.o
+obj-$(CONFIG_FORCE_FAST_CHARGE)				+= fastchg.o
 obj-$(CONFIG_LGE_PM) 					+= lge_smpl_count.o
 obj-$(CONFIG_LGE_PM_BATTERY_ID_CHECKER)			+= lge_battery_id.o
 obj-$(CONFIG_BQ24296_CHARGER)				+= bq24296_charger.o
