--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -617,6 +617,14 @@ config LGE_LOW_BATT_LIMIT
 	tristate "to prevent UVLO at low voltage"
 	default n
 
+config FORCE_FAST_CHARGE
+	bool "Force fast charging (AC/USB)"
+	default y
+	help
+	  A simple sysfs interface to force adapters that
+	  are detected as USB to charge as AC (1A/h) or to set
+	  custom charging currents for AC and USB.
+
 config LGE_PM_USB_CURRENT_MAX_MODE
 	tristate "LGE_PM Support USB current max mode"
 	default n
